kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: my-portfolio
spec:
  type: ClusterIP
  selector:
    app: my-portfolio
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
