kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: my-portfolio
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app.kubernetes.io/name: my-portfolio
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: lcalvo-com-suite
spec:
  ingressClassName: nginx
  rules:
  - host: "lcalvo.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 4000
  - host: "www.lcalvo.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 4000
  tls:
  - hosts:
    - lcalvo.com
    - www.lcalvo.com
    secretName: lcalvo-com-tls
